# uv-outdated

./: .mise.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/uv_outdated/: __main__.py  utils.py
tests/: test_outdated.py
