[project]
name = "uv-outdated"
version = "1.0.2"
description = "Show uv outdated packages in a nicer way"
authors = [{ name = "Simon Percivall"}]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = [
  "requirements",
  "packaging",
]

dependencies = [
  "packaging>=25.0",
  "pydantic>=2.11.7",
  "rich>=14.1.0",
  "typer>=0.16.0",
]

[project.urls]
Repository = "https://github.com/simonpercivall/uv-outdated"
Changelog = "https://github.com/simonpercivall/uv-outdated/blob/main/CHANGELOG.md"
Releases = "https://github.com/simonpercivall/uv-outdated/releases"

[project.scripts]
uv-outdated = "uv_outdated.__main__:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "mypy[faster-cache]>=1.17.1",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "pytest-sugar>=1.0.0",
  "ruff>=0.12.7",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.isort]
atomic = true
profile = "black"
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true
scripts_are_modules = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
exclude = [
  "build",
  "dist",
]
